--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.113", features = ["derive"] }
 serde_derive = "1.0.113"
 serde_json = "1.0.113"
+chrono = "0.4.33"
