--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1.0.113", features = ["derive"] }
 serde_derive = "1.0.113"
 serde_json = "1.0.113"
 chrono = "0.4.33"
+log = "0.4.20"
