--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde_derive = "1.0.113"
 serde_json = "1.0.113"
 chrono = "0.4.33"
 log = "0.4.20"
+clap = { version = "4.4.11", features = ["derive", "env"] }
+dotenv = "0.15.0"
