thread async token handling
fully async threaded handling so we won't lose chunks / output
while streaming or stall when processing.

TODO: needs more work to really make sure this is correct 100% or
needs some more improvements / optimizations.

collect errors, report at end, mark where they were in the output.
better streaming of the output to avoid missing anything that
matters. FIXME: needs to use bytes() streaming WIP...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ log = "0.4.20"
 clap = { version = "4.4.11", features = ["derive", "env"] }
 dotenv = "0.15.0"
 env_logger = "0.9"
+futures = "0.3.30"
+task = "0.0.1"
+bytes = "1.5.0"
