--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
 [dependencies]
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
@@ -19,3 +22,5 @@ env_logger = "0.9"
 futures = "0.3.30"
 task = "0.0.1"
 bytes = "1.5.0"
+sysinfo = "0.23.9"
+once_cell = "1.5.2"
