--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,6 @@ sysinfo = "0.23.9"
 once_cell = "1.5.2"
 pcap = { version = "1.1.0", features = ["all-features", "capture-stream"] }
 anyhow = "1.0.79"
+lazy_static = "1.4.0"
+rtp-rs = "0.6.0"
+ahash = "0.8.7"
