--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,7 @@ anyhow = "1.0.79"
 lazy_static = "1.4.0"
 rtp-rs = "0.6.0"
 ahash = "0.8.7"
+mpeg2ts-reader = "0.15.0"
+scte35-reader = "0.14.0"
+h264-reader = "0.7.0"
+hex-slice = "0.1.4"
