--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,19 @@ inherits = "release"
 debug = true
 
 [dependencies]
+hf-hub = "0.3.0"
+tracing-subscriber = "0.3.7"
+tracing-chrome = "0.7.1"
+candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
+tokenizers = { version = "0.15.0", default-features = false }
+candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
+candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
+metal = { version = "0.27.0", features = ["mps"] }
+candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
+image = { version = "0.24.7", default-features = false, features = [
+    "jpeg",
+    "png",
+] }
 capsule = { version = "0.1.5", optional = true }
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
@@ -49,3 +62,4 @@ scte35-reader = "0.14.0"
 h264-reader = "0.7.0"
 hex-slice = "0.1.4"
 bincode = "1.3.3"
+candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
