plugin stable diffusion
TODO: bug with something not right in shape of image within
tensors that needs more work. WIP

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/lib.rs"
 [features]
 default = []
 dpdk_enabled = ["capsule"]
+metal = ["candle-core/metal", "candle-nn/metal"]
 
 [profile.release-with-debug]
 inherits = "release"
