--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,4 +73,4 @@ h264-reader = "0.7.0"
 hex-slice = "0.1.4"
 bincode = "1.3.3"
 candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
-ndi-sdk = { git = "https://github.com/coral/rust-ndi.git", branch = "master" }
+ndi-sdk = { git = "https://github.com/groovybits/rust-ndi.git", branch = "master" }
