--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ path = "src/lib.rs"
 default = []
 dpdk_enabled = ["capsule"]
 metal = ["candle-core/metal", "candle-nn/metal"]
+ndi = ["ndi-sdk"]
 
 [profile.release-with-debug]
 inherits = "release"
@@ -73,4 +74,4 @@ h264-reader = "0.7.0"
 hex-slice = "0.1.4"
 bincode = "1.3.3"
 candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
-ndi-sdk = { git = "https://github.com/groovybits/rust-ndi.git", branch = "master" }
+ndi-sdk = { git = "https://github.com/groovybits/rust-ndi.git", branch = "master", optional = true }
