add ndi needed for sdk to build and run
TODO: still doesn't work and stable diffusion seems broken...

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,7 @@
 
 RUST_LOG="info"
 OPENAI_API_KEY="YOUR_KEY_HERE"
+NDI_RUNTIME_DIR_V3="/usr/local/lib/"
+NDI_RUNTIME_DIR_V4="/usr/local/lib/"
+DYLD_LIBRARY_PATH=/usr/local/lib:$DYLD_LIBRARY_PATH
 
