--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,3 +79,5 @@ rand = "0.8.5"
 uuid = { version = "1.7.0", features = ["v4"] }
 imageproc = "0.23.0"
 rusttype = "0.9.3"
+rodio = "0.17.3"
+minimp3 = "0.5.1"
