fix connecting and formatting of token/channel
connects to twitch. TODO: have it do something, stalls right now.

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NDI_RUNTIME_DIR_V3="/usr/local/lib/"
 NDI_RUNTIME_DIR_V4="/usr/local/lib/"
 DYLD_LIBRARY_PATH=/usr/local/lib:$DYLD_LIBRARY_PATH
 
-TWITCH_CHANNEL=
-TWITCH_USERNAME=
-TWITCH_AUTH=
+TWITCH_CHANNEL="#channel"
+TWITCH_USERNAME="username"
+TWITCH_AUTH="oauth:token_string"
 
