--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,7 +75,7 @@ hex-slice = "0.1.4"
 bincode = "1.3.3"
 candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
 ndi-sdk = { git = "https://github.com/groovybits/rust-ndi.git", branch = "master", optional = true }
-rand = "0.8.5"
+rand = { version = "0.8.5", features = ["small_rng"] }
 uuid = { version = "1.7.0", features = ["v4"] }
 imageproc = "0.23.0"
 rusttype = "0.9.3"
