--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ license-file = "LICENSE"
 homepage = "https://github.com/groovybits/rsllm/wiki"
 repository = "https://github.com/groovybits/rsllm"
 authors = ["Chris Kennedy"]
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 
 [lib]
@@ -85,3 +85,4 @@ tmi = "0.5.0"
 pin-utils = "0.1.0"
 hound = "3.5.1"
 urlencoding = "2.1.3"
+clap_builder = "4.5.2"
