--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,7 @@ h264-reader = "0.7.0"
 hex-slice = "0.1.4"
 bincode = "1.3.3"
 candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
-ndi-sdk = { git = "https://github.com/groovybits/rust-ndi.git", branch = "master", optional = true }
+ndi-sdk = { git = "https://github.com/groovybits/rust-ndi.git", version = "0.1.0", optional = true }
 rand = { version = "0.8.5", features = ["small_rng"] }
 uuid = { version = "1.7.0", features = ["v4"] }
 imageproc = "0.23.0"
