--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ default = []
 dpdk_enabled = ["capsule"]
 metal = ["candle-core/metal", "candle-nn/metal"]
 ndi = ["ndi-sdk-rsllm"]
+metavoice = []
 
 [profile.release-with-debug]
 inherits = "release"
