--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ path = "src/lib.rs"
 [features]
 default = []
 dpdk_enabled = ["capsule"]
-mps = ["candle-core/metal", "candle-nn/metal"]
+mps = ["candle-core/metal", "candle-nn/metal", "metal"]
 ndi = ["ndi-sdk-rsllm"]
 metavoice = []
 audioplayer = ["rodio"]
@@ -41,7 +41,7 @@ candle-examples = { git = "https://github.com/huggingface/candle.git", version =
 tokenizers = { version = "0.15.0", default-features = false }
 candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
 candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
-metal = { version = "0.27.0", features = ["mps"] }
+metal = { version = "0.27.0", features = ["mps"], optional = true  }
 candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
 image = { version = "0.24.7", default-features = false, features = [
     "jpeg",
