--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ license-file = "LICENSE"
 homepage = "https://github.com/groovybits/rsllm/wiki"
 repository = "https://github.com/groovybits/rsllm"
 authors = ["Chris Kennedy"]
-version = "0.4.6"
+version = "0.4.7"
 edition = "2021"
 
 [lib]
@@ -24,7 +24,7 @@ path = "src/lib.rs"
 [features]
 default = []
 dpdk_enabled = ["capsule"]
-mps = ["candle-core/metal", "candle-nn/metal", "metal"]
+mps = ["candle-core/metal", "candle-nn/metal", "metal", "candle-metal-kernels" ]
 ndi = ["ndi-sdk-rsllm"]
 metavoice = []
 audioplayer = ["rodio"]
@@ -39,7 +39,7 @@ tracing-subscriber = "0.3.7"
 tracing-chrome = "0.7.1"
 candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
 tokenizers = { version = "0.15.0", default-features = false }
-candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
+candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.4.1", optional = true }
 candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
 metal = { version = "0.27.0", features = ["mps"], optional = true  }
 candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
