--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,7 @@
 [package]
 name = "rsllm"
 description = "Rust LLM Stream Analyzer and Content Generator"
-keywords = [
-    "ai",
-    "stable-diffusion",
-    "ndi",
-    "text-to-speech",
-    "twitch",
-]
+keywords = ["ai", "stable-diffusion", "ndi", "text-to-speech", "twitch"]
 categories = ["command-line-utilities"]
 readme = "README.md"
 documentation = "https://docs.rs/rsllm"
@@ -15,7 +9,7 @@ license-file = "LICENSE"
 homepage = "https://github.com/groovybits/rsllm/wiki"
 repository = "https://github.com/groovybits/rsllm"
 authors = ["Chris Kennedy"]
-version = "0.4.9"
+version = "0.5.0"
 edition = "2021"
 
 [lib]
@@ -24,7 +18,7 @@ path = "src/lib.rs"
 [features]
 default = []
 dpdk_enabled = ["capsule"]
-mps = ["candle-core/metal", "candle-nn/metal", "metal", "candle-metal-kernels" ]
+mps = ["candle-core/metal", "candle-nn/metal", "metal", "candle-metal-kernels"]
 ndi = ["ndi-sdk-rsllm"]
 metavoice = []
 audioplayer = ["rodio"]
@@ -41,7 +35,7 @@ candle-examples = { git = "https://github.com/huggingface/candle.git", version =
 tokenizers = { version = "0.15.0", default-features = false }
 candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.4.1", optional = true }
 candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
-metal = { version = "0.27.0", features = ["mps"], optional = true  }
+metal = { version = "0.27.0", features = ["mps"], optional = true }
 candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
 image = { version = "0.24.7", default-features = false, features = [
     "jpeg",
