twitch chat interactive mode (#31)
* twitch chat interactive mode

- twitch chat is interactive.
- stable diffusion token count to avoid crashing.
- better prompt segmentation.
- STT doesn't make awful sounds.
- Pad NDI audio output and remove funny characters.

* add cabextract dep and fonts extraction

- less history in twitch bot.

* unpack fonts fixes

* twitch chat info added to readme

* v0.5.2

* build without needing fonts extracted

allow building without fonts extracted for docs.rs.

* add build info for fonts inclusion

---------

Co-authored-by: Chris Kennedy <c@groovy.org>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,25 +1,27 @@
 name: Rust
 
 on:
-  push:
-    branches: [ "main", "staging" ]
-  pull_request:
-    branches: [ "main", "staging" ]
+    push:
+        branches: ["main", "staging"]
+    pull_request:
+        branches: ["main", "staging"]
 
 env:
-  CARGO_TERM_COLOR: always
+    CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-    runs-on: macos-latest  # Changed from ubuntu-latest to macos-latest
+    build:
+        runs-on: macos-latest # Changed from ubuntu-latest to macos-latest
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Install dependencies
-      run: |
-        brew update
-        brew install libpcap zmq capnp
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+        steps:
+            - uses: actions/checkout@v3
+            - name: Install dependencies
+              run: |
+                  brew update
+                  brew install libpcap zmq capnp cabextract
+            - name: Build
+              run: |
+                  cd fonts && sh unpack_fonts.sh && cd ../
+                  cargo build --verbose
+            - name: Run tests
+              run: cargo test --verbose
