--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,15 +29,16 @@ inherits = "release"
 debug = true
 
 [dependencies]
-hf-hub = "0.3.0"
+#hf-hub = "0.3.2"
+candle-hf-hub = "0.3.3"
 tracing-subscriber = "0.3.7"
 tracing-chrome = "0.7.1"
-candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
+candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
 tokenizers = { version = "0.19.1", default-features = false }
-candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.5.0", optional = true }
-candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
+candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.8.0", optional = true }
+candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
 metal = { version = "0.27.0", features = ["mps"], optional = true }
-candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
+candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
 image = { version = "0.24.7", default-features = false, features = [
     "jpeg",
     "png",
@@ -68,7 +69,7 @@ scte35-reader = "0.15.0"
 h264-reader = "0.7.0"
 hex-slice = "0.1.4"
 bincode = "1.3.3"
-candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
+candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
 ndi-sdk-rsllm = { git = "https://github.com/groovybits/rust-ndi.git", version = "0.1.2", optional = true }
 rand = { version = "0.8.5", features = ["small_rng"] }
 uuid = { version = "1.7.0", features = ["v4"] }
